// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Search: есть корректный снимок 1`] = `
<form>
  <input
    type="search"
  />
  <button
    type="submit"
  />
</form>
`;

exports[`Search есть корректный снимок 1`] = `
<form>
  Поиск
  <input
    type="search"
  />
  <button
    type="submit"
  >
    Поиск
  </button>
</form>
`;
